# IMLP

./: LICENSE.txt  README.md
PLOSONE/Experiment1/: App_RunRandomTrials_RigidBodyXfm.m  Compute3dRotation_Iso.m  (+20 more)
PLOSONE/Experiments2-8/ICP_App/: CMakeLists.txt  ParameterizedTest.cpp  ParameterizedTest.h  ParameterizedTest_Mesh_SurfaceNoise.cpp  ParameterizedTest_Mesh_SurfaceNoise.h  ParameterizedTest_Mesh_SurfaceNoise_Outliers.cpp  ParameterizedTest_PointCloud_PartialOverlap.cpp  ParameterizedTest_PointCloud_PartialOverlap.h  ParameterizedTest_PointCloud_SubShape.cpp  ParameterizedTest_PointCloud_SubShape.h  ParameterizedTest_PointCloud_SurfaceNoise.cpp  ParameterizedTest_PointCloud_SurfaceNoise.h  ParameterizedTest_PointCloud_SurfaceNoise_Outliers.cpp  main.cpp  utility.cpp  utility.h
cisstICP/: CMakeLists.txt  Ellipsoid_OBB_Intersection_Solver.cpp  Ellipsoid_OBB_Intersection_Solver.h  LICENSE.txt  README.md  README.txt  RegisterP2P.cpp  RegisterP2P.h  cisstAlgorithmCovTree.cpp  cisstAlgorithmCovTree.h  cisstAlgorithmCovTree_CP.cpp  cisstAlgorithmCovTree_CP.h  cisstAlgorithmCovTree_CP_Mesh.cpp  cisstAlgorithmCovTree_CP_Mesh.h  cisstAlgorithmCovTree_CP_PointCloud.cpp  cisstAlgorithmCovTree_CP_PointCloud.h  cisstAlgorithmICP.cpp  cisstAlgorithmICP.h  cisstAlgorithmICP_IMLP.cpp  cisstAlgorithmICP_IMLP.h  cisstAlgorithmICP_IMLP_ClosestPoint.cpp  cisstAlgorithmICP_IMLP_ClosestPoint.h  cisstAlgorithmICP_IMLP_ClosestPoint_Mesh.cpp  cisstAlgorithmICP_IMLP_ClosestPoint_Mesh.h  cisstAlgorithmICP_IMLP_ClosestPoint_PointCloud.cpp  cisstAlgorithmICP_IMLP_ClosestPoint_PointCloud.h  cisstAlgorithmICP_IMLP_MahalDist.cpp  cisstAlgorithmICP_IMLP_MahalDist.h  cisstAlgorithmICP_IMLP_MahalDist_Mesh.cpp  cisstAlgorithmICP_IMLP_MahalDist_Mesh.h  cisstAlgorithmICP_IMLP_MahalDist_PointCloud.cpp  cisstAlgorithmICP_IMLP_MahalDist_PointCloud.h  cisstAlgorithmICP_IMLP_Mesh.cpp  cisstAlgorithmICP_IMLP_Mesh.h  cisstAlgorithmICP_IMLP_PointCloud.cpp  cisstAlgorithmICP_IMLP_PointCloud.h  cisstAlgorithmICP_RobustICP.cpp  cisstAlgorithmICP_RobustICP.h  cisstAlgorithmICP_RobustICP_Mesh.h  cisstAlgorithmICP_RobustICP_PointCloud.h  (+30 more)
cisstICP/cisstICP/: BoundingBox.cpp  BoundingBox.h  BoundingBox2D.cpp  BoundingBox2D.h  CMakeLists.txt  DirPDTree2DBase.cpp  DirPDTree2DBase.h  DirPDTree2DNode.cpp  DirPDTree2DNode.h  DirPDTree2D_Edges.cpp  DirPDTree2D_Edges.h  DirPDTree2D_PointCloud.cpp  DirPDTree2D_PointCloud.h  DirPDTreeBase.cpp  DirPDTreeBase.h  DirPDTreeNode.cpp  DirPDTreeNode.h  DirPDTree_Mesh.cpp  DirPDTree_Mesh.h  DirPDTree_PointCloud.cpp  DirPDTree_PointCloud.h  Ellipsoid_OBB_Intersection_Solver.cpp  Ellipsoid_OBB_Intersection_Solver.h  PDTreeBase.cpp  PDTreeBase.h  PDTreeNode.cpp  PDTreeNode.h  PDTree_Mesh.cpp  PDTree_Mesh.h  PDTree_PointCloud.cpp  PDTree_PointCloud.h  PointProjectionRoutines.cpp  PointProjectionRoutines.h  RegisterP2P.cpp  RegisterP2P.h  TriangleClosestPointSolver.cpp  TriangleClosestPointSolver.h  alg2D_DirICP.cpp  alg2D_DirICP.h  alg2D_DirICP_StdICP.cpp  (+99 more)
cisstICP/cisstICP/ExtraAlgorithms/: algICP_IMLP_ClosestPoint.cpp  algICP_IMLP_ClosestPoint.h  algICP_IMLP_ClosestPoint_Mesh.cpp  algICP_IMLP_ClosestPoint_Mesh.h  algICP_IMLP_ClosestPoint_PointCloud.cpp  algICP_IMLP_ClosestPoint_PointCloud.h  algICP_IMLP_MahalDist.cpp  algICP_IMLP_MahalDist.h  algICP_IMLP_MahalDist_Mesh.cpp  algICP_IMLP_MahalDist_Mesh.h  algICP_IMLP_MahalDist_PointCloud.cpp  algICP_IMLP_MahalDist_PointCloud.h  algICP_RobustICP.cpp  algICP_RobustICP.h  algICP_RobustICP_Mesh.h  algICP_RobustICP_PointCloud.h
cisstICP/cisstICP_App/: CMakeLists.txt  main.cpp  testICP.h  testICPNormals.h  utility.cpp  utility.h
cisstICP/cisstICP_App/tests/: test_ClosestPointSolver.h  test_PLYLoadSave.h
cisstICP/dependencies/Matlab Dependencies/PLY_IO/: ply_read.m  ply_write.m
cisstICP/matlabICP/: .gitignore  CMakeLists.txt  matlabClassHandle.h  matlabExtras.h  matlabParser.h  mexInterface_Alg2D_DirPDTree_CP_Edges.cpp  mexInterface_Alg2D_DirPDTree_CP_Edges.h  mexInterface_Alg2D_DirPDTree_CP_PointCloud.cpp  mexInterface_Alg2D_DirPDTree_CP_PointCloud.h  mexInterface_Alg2D_DirPDTree_vonMises_Edges.cpp  mexInterface_Alg2D_DirPDTree_vonMises_Edges.h  mexInterface_Alg2D_DirPDTree_vonMises_PointCloud.cpp  mexInterface_Alg2D_DirPDTree_vonMises_PointCloud.h  mexInterface_AlgDirICP_GIMLOP_Mesh.cpp  mexInterface_AlgDirICP_GIMLOP_Mesh.h  mexInterface_AlgDirICP_IMLOP_Mesh.cpp  mexInterface_AlgDirICP_IMLOP_Mesh.def  mexInterface_AlgDirICP_IMLOP_Mesh.h  mexInterface_AlgDirICP_PIMLOP_Mesh.cpp  mexInterface_AlgDirICP_PIMLOP_Mesh.h  mexInterface_AlgDirICP_StdICP_Mesh.cpp  mexInterface_AlgDirICP_StdICP_Mesh.h  mexInterface_AlgICP_StdICP_Mesh.cpp  mexInterface_AlgICP_StdICP_Mesh.h  mexInterface_AlgPDTree_CP_Mesh.cpp  mexInterface_AlgPDTree_CP_Mesh.h  mexInterface_AlgPDTree_MLP_Mesh.cpp  mexInterface_AlgPDTree_MLP_Mesh.h
cisstICP/matlabICP/TestApps/: .gitignore  App_Test_IMLOP.m  App_Test_StdICP.m
cisstICP/matlabICP/m/: IterateICP.m  algDirICP_GIMLOP.m  algDirICP_IMLOP.m  algDirICP_PIMLOP.m  algDirICP_StdICP.m  algICP.m  algICP_StdICP.m  algICP_TrimmedICP.m  algOptimizer_Matlab_SE3Rodrigues.m  mexInterface_Alg2D_DirPDTree_CP_Edges.m  mexInterface_Alg2D_DirPDTree_CP_PointCloud.m  mexInterface_Alg2D_DirPDTree_vonMises_Edges.m  mexInterface_Alg2D_DirPDTree_vonMises_PointCloud.m  mexInterface_AlgDirICP_GIMLOP_Mesh.m  mexInterface_AlgDirICP_IMLOP_Mesh.m  mexInterface_AlgDirICP_PIMLOP_Mesh.m  mexInterface_AlgDirICP_StdICP_Mesh.m  mexInterface_AlgICP_StdICP_Mesh.m  mexInterface_AlgPDTree_CP_Mesh.m  mexInterface_AlgPDTree_MLP_Mesh.m  objIterData.m  objOptICP.m
cisstICP/matlabICP/m/utilities/: App_MeshComputeFeatures.m  AxisAngle2rot.m  ComputeTRE.m  ComputeTREWithScale.m  MeshGetTriangleCenters.m  PlotMesh.m  Register_P2P.m  RenormalizeRotation.m  applyFrm3.m  dR_Rodrigues.m  euler2rot.m  getFrm3.m  getPos.m  getRot.m  invFrm3.m  ply_read2.m  ply_write2.m  printfCapture.m  quat2rot.m  rodrigues2rot.m  rot2quat.m  rot2rodrigues.m  rotx.m  roty.m  rotz.m  utlDebugMsg.m  utlRuntimeProfilerMsg.m
cisstICP/test_data/: ProximalFemur.ply  RIGHTHEMIPELVIS_centered.ply
(+27 files in other folders)
